# temporal-random-walk-link-prediction

./: .gitignore  generate_negative_edges.py  main.py  playground.ipynb  requirements.txt
negative_edge_sampler/: CMakeLists.txt  NegativeEdgeSampler.cpp  NegativeEdgeSampler.h  main.cpp  negative_edge_sampler.cpp
src/: dataset.py  embedding_store.py  model.py  negative_sampler.py  pipeline.py  utils.py
